address chia comments